[chromium] renderSurface in incorrect space if owning layer has empty but non-zero bounds https://bugs.webkit.org/show_bug.cgi?id=93795

Reviewed by Adrienne Walker.

Source/WebCore:

If a renderSurface is created by a layer that had zero
area (empty) but non-zero bounds (either width or height was
non-zero), then one translation transform was accidentally being
skipped, causing the renderSurface drawTransform to be incorrect.
The fix is simply to move that transform outside of the
if-statement so it is not skipped.

Unit test added:
  CCLayerTreeHostCommonTest.verifyTransformsForDegenerateIntermediateLayer()

* platform/graphics/chromium/cc/CCLayerTreeHostCommon.cpp:
(WebCore::calculateDrawTransformsInternal):

Source/WebKit/chromium:

* tests/CCLayerTreeHostCommonTest.cpp:

Canonical link: https://commits.webkit.org/111754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125486 268f45cc-cd09-0410-ab3c-d52691b4dbfc